discussion/kv_engine/129840/129840_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-39375: Add Setting for storage thread

Add a new memcached setting "num_storage_threads" which is a global
configuration value that we can pass through to the engine to set the
appropriate number of backend storage threads. This configuration
parameter will have a default value that can be supplied by passing a
configuration parameter of 0.

In a following patch we will add a "magma_flusher_thread_percentage"
configuration parameter than is required to calculate the appropriate
number of magma flusher and compactor threads.

Change-Id: Iae43f14ef914c8b8cb02d996dcdede650614f2a9

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2020-07-23 15:54:09.000000000
Message: 
Uploaded patch set 10.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-23 15:57:49.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25320/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25320/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29274/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29274/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3881/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3881/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4851/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4851/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4958/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4773/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4773/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12673/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12673/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3492/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:25:16: error: use of undeclared identifier "mc_time_get_current_time"; did you mean "get_current_time"? [clang-diagnostic-error]
        return mc_time_get_current_time();
               ^~~~~~~~~~~~~~~~~~~~~~~~
               get_current_time
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:24:16: note: "get_current_time" declared here
    rel_time_t get_current_time() override {
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:29:16: error: use of undeclared identifier "mc_time_convert_to_real_time" [clang-diagnostic-error]
        return mc_time_convert_to_real_time(exptime);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:33:16: error: use of undeclared identifier "mc_time_convert_to_abs_time" [clang-diagnostic-error]
        return mc_time_convert_to_abs_time(exptime);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:37:16: error: use of undeclared identifier "mc_time_limit_abstime" [clang-diagnostic-error]
        return mc_time_limit_abstime(t, limit);
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:53:16: error: use of undeclared identifier "environment" [clang-diagnostic-error]
        return environment.engine_file_descriptors;
               ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3492/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_core_api.h:25:16:
error: use of undeclared identifier "mc_time_get_current_time"; did you mean "get_current_time"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3492/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2006/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
